Compiler/tests/bad/for4.nx
type t = [0 .. 1];
type a : array t of t;

val b : a filled by 2;

foreach i in [t .. [0 .. 10]]
{   
    print(i);
}
